[package]
name = "org-to-subtext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
orgize = { version = "0.9.0", path = "../../github.com/PoiScript/orgize" }
serde_json = "1.0.102"
sqlx = { version = "0.7.0", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.29.1", features = ["full"] }
